# tsadaash-helper

./: .gitignore  Cargo.toml
examples/: periodicity_demo.rs
src/: lib.rs  main.rs
src/cli/: auth.rs  helpers.rs  menu.rs  mod.rs  security.rs  task.rs
src/db/: connection.rs
src/db/repository/: task.rs  user.rs
src/domain/: continents.rs  mod.rs  occurrence_rep.rs  periodicity.rs  task.rs  task_occurrence.rs  timezone.rs  user.rs
src/domain/builders/: mod.rs  periodicity_builder.rs
src/domain/entities/task/: mod.rs  occurrence_rep.rs  periodicity.rs  task.rs  task_occurrence.rs
src/domain/entities/user/: location.rs  mod.rs  timezone.rs  user.rs
src/domain/periodicity/: builder.rs  tests.rs  validation.rs
src/domain/tests/: tests.rs
src/domain/validators/: mod.rs  periodicity_validator.rs
