[package]
name = "tsadaash"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
chrono = "0.4.43"
chrono-tz = "0.10.4"
domain = "0.11.1"
inquire = { version = "0.9.2", features = ["date", "editor"] }
rusqlite = "0.38.0"
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
